--- a/README.adoc
+++ b/README.adoc
@@ -17,8 +17,21 @@
 
 == Presentation Docker
 
+Charles de MAGNEVAL <charles.de_magneval@open-groupe.com>
+v1.0, 2016-01-10
+:toc:
+:homepage: https://github.com/magneval/
+
 == Historique:
+[%step]
 ** {link-demo-adoc}[AsciiDoc source file]
 ** {link-demo-html}[HTML output file]
 ** {link-demo-pdf}[PDF output file]
 
+
+[NOTE.speaker]
+--
+Module est le point d'entré de l'application
+Service permet de fournir un service au controlleurs
+Controller 
+--
