--- a/README.adoc
+++ b/README.adoc
@@ -104,7 +104,8 @@ L'approche existe deouis longtemps :
 
 == Docker
 
-Solution basee sur des techniques existantes et eprouvees :
+Solution basee sur des techniques existantes dans le noyau Linux et eprouvees :
+
 * LXC,
 * CGgroup,
 * vritualisaton du reseau,
@@ -117,9 +118,36 @@ Il s'appuie plutôt sur les fonctionnalités du noyau et utilise l'isolation de 
 * le processeur,
 * la mémoire,
 * les entrées et sorties
-* les connexions réseau
+* les connexions réseaux
 
 ainsi que des espaces de noms séparés pour isoler le système d'exploitation tel que vu par l'application
+
+Il peut tourner sous d'autre plate-forme comme MacOS X ou Windows (mais via une VM Linux)
+
+
+== Les bases de Docker
+
+Chaque "machine" se base sur une image d'un systeme Linux
+
+Cette image est compose d'une image disque basique agrementer d'actions d'installations complementaires.
+
+Le processus est definis par le "Docker file".
+
+une fois l'image generre, elle peut etre reutiliser autant de fois que souhaite par le principe du COW.
+
+Le Copy On Write, permet de ne faire une copie que de ce qui doit etre modifier et donc de reduire la taille de deux image differentes a la taille des fichiers modifies.
+
+Une meme image peut etre referencer dans la ceation de nombreux container
+
+Les couches d'images peuvent etre partage pour eviter de le recree a chaque fois.
+
+Le "Docker file" contient aussi la definitiion des ports reseau presente et des dossier partage entre le systeme hote et le container.
+
+
+== Docker Compose
+
+
+== Docker Swarm
 
 
 == le cloud
