--- a/README.adoc
+++ b/README.adoc
@@ -45,16 +45,15 @@ https://github.com/magneval/
 [%step]
 ** le multitache
 ** le reseau
-** pas le programme, l'OS
+** pas un programme, un OS
 
-== Historique:
-** pas le programme, l'OS
-*** dos
-*** OS400
-*** Unix
-*** windows
-*** Linux
-*** Mac OS X
+== les OS
+* dos
+* OS400
+* Unix
+* windows
+* Linux
+* Mac OS X
 
 [NOTE.speaker]
 --
@@ -65,9 +64,9 @@ standardisation
 
 == la virtualisation
 
-+ La migration IBM 36 vers IBM38 Oblige IBM a faire le premier emulateur.
+* La migration IBM 36 vers IBM38 Oblige IBM a faire le premier emulateur.
 
-+ On peut faire tourner une machine dans une autre. +
+* On peut faire tourner une machine dans une autre. +
 La machine devient un simple programme 
 
 == !
@@ -76,7 +75,7 @@ image::https://upload.wikimedia.org/wikipedia/commons/thumb/5/5c/Diagramme_Archi
 
 == la virtualisation
 
-+Il existe de nombreuses solutions :
+Il existe de nombreuses solutions :
 
 * VMware
 * Qemu
@@ -90,9 +89,9 @@ On utilse tous une JVM
 
 == les hypervirseurs
 
-L'approche est similaire, mais l'OS est allege pour permettre un acces plus rapide aux couches basse du systeme et donc ameliorer les performances. 
+* L'approche est similaire, mais l'OS est allege pour permettre un acces plus rapide aux couches basse du systeme et donc ameliorer les performances. 
 
-Cette technique peut aussi etre aidee par des instructions special dans le coeur du processeur permettant un changement de contexte pour passer d'un OS a l'autre
+* Cette technique peut aussi etre aidee par des instructions special dans le coeur du processeur permettant un changement de contexte pour passer d'un OS a l'autre
 
 == !
 
@@ -135,6 +134,7 @@ Solution basee sur des techniques existantes dans le noyau Linux et eprouvees :
 Aproche legere
 
 Il s'appuie plutôt sur les fonctionnalités du noyau et utilise l'isolation de ressources :
+
 * le processeur,
 * la mémoire,
 * les entrées et sorties
@@ -153,11 +153,19 @@ Cette image est compose d'une image disque basique agrementer d'actions d'instal
 
 Le processus est definis par le "Docker file".
 
+== Les briques de Docker
+
+* Le registry
+* Les Images
+* Les containers
+
+== Les bases de Docker
+
 une fois l'image generre, elle peut etre reutiliser autant de fois que souhaite par le principe du COW.
 
 Le Copy On Write, permet de ne faire une copie que de ce qui doit etre modifier et donc de reduire la taille de deux image differentes a la taille des fichiers modifies.
 
-Une meme image peut etre referencer dans la ceation de nombreux container
+Une même image peut etre referencer dans la ceation de nombreux container
 
 Les couches d'images peuvent etre partage pour eviter de le recree a chaque fois.
 
