--- a/README.adoc
+++ b/README.adoc
@@ -31,7 +31,11 @@ https://github.com/magneval/
 * l'approche containeur
 * le cloud
 
+= Historique:
+
+
 == Historique:
+
 * l'ordinateur 8 bits
 [%step]
 ** un processeur
@@ -61,6 +65,8 @@ aparition d'api sur les couches basses +
 drivers +
 standardisation
 --
+
+= la virtualisation
 
 == la virtualisation
 
@@ -121,6 +127,8 @@ L'approche existe depuis longtemps :
 * Zone Solaris 
 * LXC
 
+= Docker
+
 == Docker
 
 Solution basee sur des techniques existantes dans le noyau Linux et eprouvees :
@@ -131,6 +139,8 @@ Solution basee sur des techniques existantes dans le noyau Linux et eprouvees :
 * UnionFS,
 * ...
 
+== Docker
+
 Aproche legere
 
 Il s'appuie plutôt sur les fonctionnalités du noyau et utilise l'isolation de ressources :
@@ -139,6 +149,8 @@ Il s'appuie plutôt sur les fonctionnalités du noyau et utilise l'isolation de 
 * la mémoire,
 * les entrées et sorties
 * les connexions réseaux
+
+== Docker
 
 ainsi que des espaces de noms séparés pour isoler le système d'exploitation tel que vu par l'application
 
@@ -161,11 +173,13 @@ Le processus est definis par le "Docker file".
 
 == Les bases de Docker
 
-une fois l'image generre, elle peut etre reutiliser autant de fois que souhaite par le principe du COW.
+Une fois l'image generre, elle peut etre reutiliser autant de fois que souhaite par le principe du COW.
 
 Le Copy On Write, permet de ne faire une copie que de ce qui doit etre modifier et donc de reduire la taille de deux image differentes a la taille des fichiers modifies.
 
 Une même image peut etre referencer dans la ceation de nombreux container
+
+== Docker
 
 Les couches d'images peuvent etre partage pour eviter de le recree a chaque fois.
 
