--- a/README.adoc
+++ b/README.adoc
@@ -198,6 +198,8 @@ Une même image peut etre referencer dans la ceation de nombreux container
 
 === Exemple de Docker File
 
+[source,docker]
+--
 FROM magneval/openjdk8
 
 MAINTAINER magneval
@@ -247,7 +249,7 @@ EXPOSE 8080
 
 ENV CATALINA_BASE /var/lib/tomcat8/
 CMD /usr/share/tomcat8/bin/catalina.sh  run
-
+--
 
 Les couches d'images peuvent etre partage pour eviter de le recree a chaque fois.
 
