--- a/README.adoc
+++ b/README.adoc
@@ -8,17 +8,17 @@
 :revealjs_hideAddressBar: true
 
 
-= Presentation VM Docker
+= Présentation VM Docker
 
 :link-github-project-ghpages: https://magneval.github.io/PresentationDocker
 :link-demo-html: {link-github-project-ghpages}/demo.html
 :link-demo-pdf: {link-github-project-ghpages}/demo.pdf
 :link-demo-adoc: https://raw.githubusercontent.com/magneval/PresentationDocker/master/demo.adoc
 
-== Presentation Docker
+== Présentation Docker
 
 Charles de MAGNEVAL +
-charles.de_magneval@open-groupe.com +
+Charles.de_magneval@open-groupe.com +
 v1.0, 2017-04-10 +
  +
 https://github.com/magneval/
@@ -28,7 +28,7 @@ https://github.com/magneval/
 * historique
 * la virtualisation
 * les hypervirseurs
-* l'approche containeur
+* l'approche container
 * le cloud
 
 == Historique
@@ -36,28 +36,28 @@ https://github.com/magneval/
 === l'ordinateur 8 bits
 [%step]
 * un processeur
-* la ram
-* la rom
+* la RAM
+* la ROM
 * le stockage de masse
 * le programme
 
 === la version 16 bits
 [%step]
-* le multitache
-* le reseau
+* le multi-tache
+* le réseau
 * pas un programme, un OS
 
 === les OS
 * dos
 * OS400
-* Unix
-* windows
+* UNIX
+* Windows
 * Linux
 * Mac OS X
 
 [NOTE.speaker]
 --
-aparition d'api sur les couches basses +
+Apparition d'api sur les couches basses +
 drivers +
 standardisation
 --
@@ -66,14 +66,14 @@ standardisation
 
 === la virtualisation
 
-* La migration IBM 36 vers IBM38 Oblige IBM a faire le premier emulateur.
+* La migration IBM 36 vers IBM38 Oblige IBM a faire le premier émulateur.
 
 * On peut faire tourner une machine dans une autre. +
 La machine devient un simple programme 
 
 === !
 
-image::https://upload.wikimedia.org/wikipedia/commons/thumb/5/5c/Diagramme_ArchiEmulateur.png/1169px-Diagramme_ArchiEmulateur.png[canvas,size=contain]
+image::https://upload.wikimedia.org/wikipedia/commons/5/5c/Diagramme_ArchiEmulateur.png[canvas,size=contain]
 
 === la virtualisation
 
@@ -86,36 +86,36 @@ Il existe de nombreuses solutions :
 
 [NOTE.speaker]
 --
-On utilse tous une JVM
+On utilise tous une JVM
 --
 
 === les hypervirseurs
 
-* L'approche est similaire, mais l'OS est allege pour permettre un acces plus rapide aux couches basse du systeme et donc ameliorer les performances. 
+* L'approche est similaire, mais l'OS est allégé pour permettre un accès plus rapide aux couches basse du système et donc améliorer les performances. 
 
-* Cette technique peut aussi etre aidee par des instructions special dans le coeur du processeur permettant un changement de contexte pour passer d'un OS a l'autre
+* Cette technique peut aussi être aidée par des instructions spécial dans le cœur du processeur permettant un changement de contexte pour passer d'un OS a l'autre
 
 === !
 
-image::https://upload.wikimedia.org/wikipedia/commons/thumb/f/fa/Diagramme_ArchiHyperviseur.png/1169px-Diagramme_ArchiHyperviseur.png[canvas,size=contain]
+image::https://upload.wikimedia.org/wikipedia/commons/f/fa/Diagramme_ArchiHyperviseur.png[canvas,size=contain]
 
 === les hypervirseurs
 
-Les plus courrants sont :
+Les plus courants sont :
 
 * VMware ESX serveur
 * Xen (Citrix)
 * Microsoft Hyper-V Server
 
-=== l'approche containeur
+=== l'approche container
 
-Ici plus de couche intermediaires, on separe juste le programme des autres
+Ici plus de couche intermédiaires, on sépare juste le programme des autres
 
 === !
 
 image::https://upload.wikimedia.org/wikipedia/commons/3/38/Diagramme_ArchiIsolateur.png[canvas,size=contain]
 
-=== l'approche containeur
+=== l'approche container
 
 L'approche existe depuis longtemps :
 
@@ -128,15 +128,15 @@ L'approche existe depuis longtemps :
 
 === !
 
-Solution basee sur des techniques existantes dans le noyau Linux et eprouvees :
+Solution basée sur des techniques existantes dans le noyau Linux et éprouvées :
 
 * LXC,
 * CGgroup,
-* vritualisaton du reseau,
+* virtualisation du réseau,
 * UnionFS,
 * ...
 
-=== Aproche legere
+=== Approche légère
 
 Il s'appuie plutôt sur les fonctionnalités du noyau et utilise l'isolation de ressources :
 
@@ -149,35 +149,35 @@ Il s'appuie plutôt sur les fonctionnalités du noyau et utilise l'isolation de 
 
 gestion des espaces de noms séparés pour isoler le système d'exploitation tel que vu par l'application
 
-Il peut tourner sous d'autre plate-forme comme MacOS X ou Windows (mais via une VM Linux)
+Il peut tourner sous d'autre plate-forme comme Mac Os X ou Windows (mais via une VM Linux)
 
 === Les briques de Docker
 
-* Le registry
+* Le Registry
 * Les Images
-* Les containers
+* Les Containers
 
 === Docker Registry
 
 * Centralisation des images
 
-* possibilite de :
+* possibilité de :
 ** puller
 ** pusher
 
 === Docker Images
 
-* ensembles de couches contenant le systeme de fichier
+* ensembles de couches contenant le système de fichier
 * compose a partir
 ** de couches de bases
 ** d'action 
-* creer a partir de docker file
+* créer a partir de docker file
 * utilisation du copy-on-write
 
 [NOTE.speaker]
 --
-Cette image est compose d'une image disque basique agrementer d'actions d'installations complementaires.
-Le processus est definis par le "Docker file".
+Cette image est compose d'une image disque basique agrémenter d'actions d'installations complémentaires.
+Le processus est définis par le "Docker file".
 --
 
 === Le Docker File
@@ -186,20 +186,20 @@ Contient :
 
 * l'image de base
 * la configuration
-* les services reseaux (ports ouvert)
+* les services réseaux (ports ouvert)
 * Les dossiers Partages
 * Le Programme lancer dans le container
 
 [NOTE.speaker]
 --
-Une fois l'image generre, elle peut etre reutiliser autant de fois que souhaite par le principe du COW.
-Le Copy On Write, permet de ne faire une copie que de ce qui doit etre modifier et donc de reduire la taille de deux image differentes a la taille des fichiers modifies.
-Une même image peut etre referencer dans la ceation de nombreux container
+Une fois l'image généré, elle peut être réutiliser autant de fois que souhaite par le principe du COW.
+Le Copy On Write, permet de ne faire une copie que de ce qui doit être modifier et donc de réduire la taille de deux image différentes a la taille des fichiers modifies.
+Une même image peut être référencer dans la création de nombreux container
 --
 
 === Exemple de Docker File
 
-[source,docker]
+[source,docker,numbered]
 --
 FROM magneval/openjdk8
 
@@ -220,8 +220,8 @@ CMD /usr/share/tomcat8/bin/catalina.sh  run
 
 [speaker-notes]
 --
-Les couches d'images peuvent etre partage pour eviter de le recree a chaque fois.
-Le "Docker file" contient aussi la definitiion des ports reseau presente et des dossier partage entre le systeme hote et le container.
+Les couches d'images peuvent être partage pour éviter de le recréé a chaque fois.
+Le "Docker file" contient aussi la définition des ports réseau présenté et des dossier partage entre le système hôte et le container.
 ```ENTRYPOINT ["/usr/local/bin/nfs_setup"]```
 --
 
