--- a/README.adoc
+++ b/README.adoc
@@ -199,7 +199,7 @@ Une même image peut être référencer dans la création de nombreux container
 
 === Exemple de Docker File
 
-[source,docker,numbered]
+[source, docker, numbered]
 --
 FROM magneval/openjdk8
 
@@ -218,13 +218,60 @@ VOLUME /exports
 CMD /usr/share/tomcat8/bin/catalina.sh  run
 --
 
-[speaker-notes]
+[NOTE.speaker]
 --
 Les couches d'images peuvent être partage pour éviter de le recréé a chaque fois.
 Le "Docker file" contient aussi la définition des ports réseau présenté et des dossier partage entre le système hôte et le container.
 ```ENTRYPOINT ["/usr/local/bin/nfs_setup"]```
 --
 
+== les commandes Docker
+
+pour la gestion des images
+```
+    search    Search for an image on the Docker Hub
+    build     Build an image from a Dockerfile
+    tag       Tag an image into a repository
+    push      Push an image or a repository to a Docker registry server
+    pull      Pull an image or a repository from a Docker registry server
+    commit    Create a new image from a container's changes
+    save      Save an image to a tar archive
+    load      Load an image from a tar archive
+    history   Show the history of an image
+    rmi       Remove one or more images
+    
+```
+
+[NOTE.speaker]
+--
+    attach    Attach to a running container
+    cp        Copy files/folders from a container's filesystem to the host path
+    create    Create a new container
+    diff      Inspect changes on a container's filesystem
+    events    Get real time events from the server
+    exec      Run a command in an existing container
+    export    Stream the contents of a container as a tar archive
+    images    List images
+    import    Create a new filesystem image from the contents of a tarball
+    info      Display system-wide information
+    inspect   Return low-level information on a container
+    kill      Kill a running container
+    login     Register or log in to a Docker registry server
+    logout    Log out from a Docker registry server
+    logs      Fetch the logs of a container
+    port      Lookup the public-facing port that is NAT-ed to PRIVATE_PORT
+    pause     Pause all processes within a container
+    ps        List containers
+    restart   Restart a running container
+    rm        Remove one or more containers
+    run       Run a command in a new container
+    start     Start a stopped container
+    stop      Stop a running container
+    top       Lookup the running processes of a container
+    unpause   Unpause a paused container
+    version   Show the Docker version information
+    wait      Block until a container stops, then print its exit code
+--
 == Docker Compose
 
 
