--- a/README.adoc
+++ b/README.adoc
@@ -272,6 +272,12 @@ pour la gestion des images
     version   Show the Docker version information
     wait      Block until a container stops, then print its exit code
 --
+
+=== !
+
+image::images/commandes-docker.gif[canvas,size=contain]
+
+
 == Docker Compose
 
 
