--- a/README.adoc
+++ b/README.adoc
@@ -236,18 +236,24 @@ build::
 Build an image from a Dockerfile
 tag::
 Tag an image into a repository
+history::
+Show the history of an image
+
+=== la gestion des images
+
 push::
 Push an image or a repository to a Docker registry server
 pull::
 Pull an image or a repository from a Docker registry server
 images::
 List images
+
+=== la gestion des images
+
 save::
 Save an image to a tar archive
 load::
 Load an image from a tar archive
-history::
-Show the history of an image
 rmi::
 Remove one or more images
 
@@ -259,18 +265,35 @@ exec::
 Run a command in an existing container
 ps::
 List containers
+top::
+Lookup the running processes of a container
+
+=== pour les instances
+
 port::
 Lookup the public-facing port that is NAT-ed to PRIVATE_PORT
 cp::
 Copy files/folders from a container's filesystem to the host path
 attach::
 Attach to a running container
-stop::
-Stop a running container
+
+=== pour les instances
+
 commit::
 Create a new image from a container's changes
+stop::
+Stop a running container
 start::
 Start a stopped container
+restart::
+Restart a running container
+
+=== pour les instances
+
+pause::
+Pause all processes within a container
+unpause::
+Unpause a paused container
 kill::
 Kill a running container
 rm::
@@ -290,12 +313,6 @@ Remove one or more containers
     login     Register or log in to a Docker registry server
     logout    Log out from a Docker registry server
     logs      Fetch the logs of a container
-    pause     Pause all processes within a container
-    restart   Restart a running container
-    start     Start a stopped container
-    stop      Stop a running container
-    top       Lookup the running processes of a container
-    unpause   Unpause a paused container
     version   Show the Docker version information
     wait      Block until a container stops, then print its exit code
 --
