--- a/README.adoc
+++ b/README.adoc
@@ -361,6 +361,8 @@ image::commandes-docker.gif[canvas,size=contain]
 
 == Docker Compose
 
+=== Exemple
+
 [source, docker, numbered]
 --
 version: "2"
@@ -383,7 +385,59 @@ services:
    - "8085:8080"
   links:
    - mysql
----
+--
+
+=== Commandes
+
+build::
+Build or rebuild services
+bundle::
+Generate a Docker bundle from the Compose file
+config::
+Validate and view the compose file
+create::
+Create services
+down::
+Stop and remove containers, networks, images, and volumes
+events::
+Receive real time events from containers
+exec::
+Execute a command in a running container
+help::
+Get help on a command
+kill::
+Kill containers
+logs::
+View output from containers
+pause::
+Pause services
+port::
+Print the public port for a port binding
+ps::
+List containers
+pull::
+Pull service images
+push::
+Push service images
+restart::
+Restart services
+rm::
+Remove stopped containers
+run::
+Run a one-off command
+scale::
+Set number of containers for a service
+start::
+Start services
+stop::
+Stop services
+unpause::
+Unpause services
+up::
+Create and start containers
+version::
+Show::
+the Docker-Compose version information
 
 == Docker Swarm
 
