--- a/README.adoc
+++ b/README.adoc
@@ -202,21 +202,7 @@ Une même image peut être référencer dans la création de nombreux container
 
 [source, DockerFile, numbered]
 --
-magneval/openjdk8
-
-MAINTAINER magneval
-
-RUN apt-get install -y tomcat8
-RUN    mkdir -p /home/developer
-
-ADD activiti-5.19.0.2.zip activiti.zip
-RUN unzip activiti.zip
-
-RUN cp activiti-5.19.0.2/wars/activiti-* /var/lib/tomcat8/webapps/
-ENV CATALINA_BASE /var/lib/tomcat8/
-VOLUME /exports
-
-CMD /usr/share/tomcat8/bin/catalina.sh  run
+include::Dockerfile[]
 --
 
 [NOTE.speaker]
@@ -361,25 +347,7 @@ image::commandes-docker.gif[canvas,size=contain]
 
 [source, DockerFile, numbered]
 --
-version: "2"
-
-services:
- mysql:
-  container_name: mysql-sb
-  ports:
-   - "3306:3306"
-  environment:
-   MYSQL_DATABASE: springbootdb
-  volumes:
-    - web-logs:/var/log/mysql
-    
- ihm:
-  image: demo/springboot-mysql:0.0.1
-  container_name: front
-  ports:
-   - "8085:8080"
-  links:
-   - mysql
+include::docker-compose.yml[]
 --
 
 === Commandes
