--- a/README.adoc
+++ b/README.adoc
@@ -153,7 +153,7 @@ gestion des espaces de noms séparés pour isoler le système d'exploitation tel
 Il peut tourner sous d'autre plate-forme comme Mac Os X ou Windows (mais via une VM Linux)
 
 === Les briques de Docker
-
+[%step]
 * Le Registry
 * Les Images
 * Les Containers
@@ -184,7 +184,7 @@ Le processus est définis par le "Docker file".
 === Le Docker File
 
 Contient :
-
+[%step]
 * l'image de base
 * la configuration
 * les services réseaux (ports ouvert)
@@ -221,9 +221,9 @@ docker search jdk
 builder les images::
 `docker build -t image_name -f Dockerfile .`
 tag une image sur le repository::
-docker tag nginx localhost:5000/nginx
+`docker tag nginx localhost:5000/nginx`
 Affiche l'historique d'une image::
-docker history dvckzasc03.rouen.francetelecom.fr:5000/pli/portainer/portainer
+`docker history image_name`
 
 === la gestion des images
 [%step]
@@ -290,34 +290,34 @@ Remove one or more containers
 [NOTE.speaker]
 --
 version Docker
-  docker version
+  `docker version`
 informations sur docker
-  docker info
+  `docker info`
 visualiser les containers en cours d'éxécution
-  docker ps
+  `docker ps`
 lancement du container en mode daemon sur des ports d'écoutes
-  docker run --name container_name -p 40080:80 -p 33061:3306 -d image_name
+  `docker run --name container_name -p 40080:80 -p 33061:3306 -d image_name`
 connexion sur un container
-  docker exec -it container_name /bin/bash
+  `docker exec -it container_name /bin/bash`
 lancement d'un container avec le mode restart
-  docker run --restart=always --name container_name -p 127.0.0.1:40080:80/tcp -d image_name
+  `docker run --restart=always --name container_name -p 127.0.0.1:40080:80/tcp -d image_name`
 arrêt et supression d'un container
-  docker stop container_name; docker rm container_name
+  `docker stop container_name; docker rm container_name`
 sauvegarde d'un container en image
-  docker commit container_name image_name
+  `docker commit container_name image_name`
 visualsation des containers en exécution
-  docker ps -a
+  `docker ps -a`
 sauvegarde et restauration des images
-  docker save -o <save image to path> <image name>
-  docker load -i <path to image tar file>
+  `docker save -o <save image to path> <image name>`
+  `docker load -i <path to image tar file>`
 push et pull sur un repository local
-  docker tag nginx localhost:5000/nginx
-  docker push localhost:5000/nginx
-  docker pull docker.somehost.com:5000/nginx
+  `docker tag nginx localhost:5000/nginx`
+  `docker push localhost:5000/nginx`
+  `docker pull docker.somehost.com:5000/nginx`
 détails sur les images
-  docker inspect image_name
+  `docker inspect image_name`
 effacer les containers qui ont été stoppés
-  docker rm $(docker ps -q -f status=exited)docker rm $(docker ps -q -f status=exited)
+  `docker rm $(docker ps -q -f status=exited)docker rm $(docker ps -q -f status=exited)`
 --
 
 === !
