--- a/README.adoc
+++ b/README.adoc
@@ -24,7 +24,7 @@ Charles.de_magneval@open-groupe.com +
 v1.0, 2017-04-10 +
  +
 https://github.com/magneval/
-image::https://api.qrserver.com/v1/create-qr-code/?data=https://magneval.github.io/PresentationDocker/client.html&amp;size=100x100[]
+image::https://api.qrserver.com/v1/create-qr-code/?data=magneval.github.io/PresentationDocker/client.html&amp;size=100x100[]
 
 === Plan
 [%step]
