--- a/README.adoc
+++ b/README.adoc
@@ -16,6 +16,8 @@
 :link-demo-html: {link-github-project-ghpages}/demo.html
 :link-demo-pdf: {link-github-project-ghpages}/demo.pdf
 :link-demo-adoc: https://raw.githubusercontent.com/magneval/PresentationDocker/master/demo.adoc
+:link-wiki: https://upload.wikimedia.org/wikipedia/commons/f/fa/Diagramme_ArchiHyperviseur.png
+:link-qr-code: qr
 
 
 == Présentation Docker
