--- a/README.adoc
+++ b/README.adoc
@@ -28,7 +28,7 @@ v1.0, 2017-04-10 +
  +
 https://github.com/magneval/
 
-image::https://api.qrserver.com/v1/create-qr-code/?data=magneval.github.io/PresentationDocker/client.html&amp;size=100x100&.png[]
+image::https://api.qrserver.com/v1/create-qr-code/?data=magneval.github.io/PresentationDocker/client.html&amp;size=100x100&.png[qrCode]
 
 === Plan
 [%step]
